// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Button Colors 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-eaj3on-Button"
        data-testid="button"
        disabled={true}
      >
        <span
          className="css-9nhvja-Button"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1etjsvk-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gg6z8n-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-ysnfml-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-tlqw5y-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-ztueyq-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1s8aiyr-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-etiv1l-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-1vw86r0-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-1yy8u54-Button"
    >
      <div
        style={
          Object {
            "marginLeft": "1rem",
            "marginRight": "0.5rem",
          }
        }
      >
        <img
          height="16"
          src="https://brandmark.io/logo-rank/random/pepsi.png"
          width="16"
        />
      </div>
      Hello world
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-1ig4eql-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-9nhvja-Button"
    >
      change me!
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1vw86r0-Button"
        data-testid="button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "1rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </div>
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1b1ajcm-Button"
        data-testid="button-size-md"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "1rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </div>
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-m4i3dc-Button"
        data-testid="button-size-sm"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "0.5rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </div>
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-pd9cpq-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-9nhvja-Button"
    >
      Hello world
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-ztueyq-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-9nhvja-Button"
    >
      Hello world
    </span>
  </button>
</div>
`;
